# pyqt_gui

./: form_layout.py  grid_layout.py  pycalc.py  pyproject.toml
calculator/: dialog.py  hello.py  main_window.py  pycalc.py  qhboxlayout.py  v_layout.py
martin_fitzpatrik_book/: 01_empty_window.py  02_signals_and_slots_1.py  02_signals_and_slots_1a.py  02_signals_and_slots_1b.py  02_signals_and_slots_2.py  02_signals_and_slots_3.py  02_signals_and_slots_4.py  03_widgets_1.py  03_widgets_2.py  04_widgets_checkbox.py  05_widgets_combobox.py  05_widgets_list.py  06_widgets_line_edit.py  07_widgets_spinbox.py  08_widgets_slider.py  09_widgets_dial.py
